Исправил код для дропа руды и текстуры deepslate_tin_ore